# pantry-rs

./: Cargo.toml  README.md  error.rs
src/: api.rs  borrow_sse.rs  error.rs  interface.rs  lib.rs  llm.rs
tests/: integration.rs
