[package]
name = "pantry-rs"
version = "0.0.1"
edition = "2021"
authors = ["Julia Merz <julia@jmerz.is>"]
description = "Rust API for working with the pantry project, found in https://github.com/JuliaMerz/pantry"
repository = "https://github.com/JuliaMerz/pantry-rs"
homepage = "https://github.com/JuliaMerz/pantry"
licence = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyperlocal = "0.8"
futures = "0.3.28"
uuid = { version = "0.8", features = ["serde", "v4"] }
hyper = { version = "0.14", features = ["default", "stream"] }
hyper-tls = "0.5"
quick-error = "2.0.1"
chrono = { version = "0.4.26", features = ['clock', 'wasmbind', 'std', 'serde'] }
sse-codec = "0.3.2"

[dev-dependencies]
tokio-test = "*"
tokio = { version = "*", features = ["full"] }
