[package]
name = "pantry-rs"
version = "0.0.4"
edition = "2021"
authors = ["Julia Merz <julia@jmerz.is>"]
description = "Rust API for working with the pantry project, found in https://github.com/JuliaMerz/pantry"
repository = "https://github.com/JuliaMerz/pantry-rs"
homepage = "https://github.com/JuliaMerz/pantry"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.28"
uuid = { version = "1.3.4", features = ["serde", "v4"] }
hyper = { version = "0.14", features = ["default", "stream"] }
hyper-tls = "0.5"
quick-error = "2.0.1"
chrono = { version = "0.4.26", features = ['clock', 'wasmbind', 'std', 'serde'] }
sse-codec = "0.3.2"
futures-timer = "3.0.2"

[target.'cfg(not(windows))'.dependencies]
hyperlocal = "0.8"

[dev-dependencies]
tokio-test = "^0.4.0"
tokio = { version = "^1.28.0", features = ["full"] }
llm = "0.1.1"
maplit = "1.0.2"

